tests/base/invalid/For_CompileFail_1.whiley
void System::main([string] args):
    st = "Hello World"
    for st in args:
        out->println(st)
